--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,17 +41,16 @@ dependencies:
   google_fonts: ^6.1.0
   video_player: ^2.8.2
   visibility_detector: ^0.4.0+2
+  flutter_launcher_icons: ^0.13.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_launcher_icons: "^0.11.0"
   flutter_lints: ^3.0.0
-
 
 flutter_launcher_icons:
    android: "launcher_icon"
-   image_path: "assets/images/icon.png"
+   image_path: "assets/images/logo.png"
 
 
   # The "flutter_lints" package below contains a set of recommended lints to
